# dotfiles

./: .gitignore  .gitmodules  COPYING  CREDITS  Makefile.am  README  Xresources  bash_completion  bash_logout  bash_profile  bashrc  configure.ac  cshrc  cvsrc  devscripts  dircolors-256color  emacs  gdbinit  gemrc  gitconfig  gnomerc  hgignore  hgrc  inputrc  irbrc  lintianrc  mk-sbuild.rc  octaverc  profile  quiltrc  quiltrc-dpkg  sbuildrc  shrc  tcsh_editing  teclarc  tmux.conf  vimrc
bazaar/: ignore
byobu/: .tmux.conf
caff/gnupghome/: gpg.conf
config/fontconfig/conf.d/: 60-monospace-prefs.conf
config/git/: ignore
ipython/: ipy_user_conf.py  ipythonrc
ipython/profile_default/: ipython_config.py
re.pl/: repl.rc
ssh/: config
vim/: vimrc_normal.vim
vim/after/ftplugin/: c.vim  fortran.vim  perl.vim  python.vim  ruby.vim  sh.vim  vim.vim
vim/after/indent/: sh.vim
vim/after/syntax/: m4.vim
vim/colors/: zenburn.vim
vim/plugin/: indentprefs.vim
